@@ -1,2 +1,2 @@
-java --enable-preview -jar ../app/build/libs/configgen.jar -datadir config  -gen lua,dir:lua,emmylua,sharedEmptyTable,shared
+java -jar ../app/build/libs/configgen.jar -datadir config  -gen lua,dir:lua,emmylua,sharedEmptyTable,shared
 pause
